Added current_status to the Resource class.  Closes issue #1.
